--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,16 +1,13 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "commonjs",
+    "module": "CommonJS",
     "rootDir": ".",
     "outDir": "dist",
-    "strict": true,
     "esModuleInterop": true,
+    "strict": false,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "types": ["node"]
   },
-  "include": [
-    "server/**/*.ts",
-    "server/types/**/*.d.ts"
-  ]
+  "include": ["server/**/*"]
 }
